# loom

./: .gitmodules  CMakeLists.txt  README.md  test.bat
loom/: CMakeLists.txt
loom/src/: _blob_.cpp  buffer.cpp  buffer.h  bufferpool.h  bus.h  converter.cpp  converter.h  effect.h  effect_spatializer.h  effectable.h  emitter.h  engine.h  error.h  format.h  ibufferprovider.h  idatanode.h  idatanode_file.h  idatanode_oscillators.h  ieffect.h  ieffect_spatializer.h  listener.h  node.h  sound.h  soundstate.h  transform.h  virtualizer.h
tests/: CMakeLists.txt  tests.cpp
